fix gap and margin

--- a/css/styles.css
+++ b/css/styles.css
@@ -242,8 +242,6 @@ color: #2E2F42;
 .list-our-team {
     display: flex;
     gap: 24px;
-    margin-top: 72px;
-    padding-bottom: 32px;
 }
 .item-our-team {
 background-color: #FFFFFF;
@@ -271,10 +269,10 @@ color: #434455;
 }
 .item-name-paragraph {
     display: flex;
-        width: 232px;
+        /* width: 232px; */
         flex-direction: column;
         align-items: center;
-        gap: 8px;
+        /* gap: 8px; */
         padding-top: 32px;
         padding-bottom: 32px;
 
@@ -331,7 +329,7 @@ color: #2e2f42;
     padding: 32px 16px;
     flex-direction: column;
     justify-content: center;
-    gap: 8px;
+    /* gap: 8px; */
     border: 1px solid #e7e9fc;
     border-top: none;
 }
